// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualLinkCell should render 1`] = `
<tr>
  <td
    class="name-cell-root"
  >
    <div
      class="content-container"
    >
      <div
        class="text-truncate"
      >
        <div
          class="table-title text-truncate"
        >
          <a
            class="text-truncate"
            data-discover="true"
            href="/workspace/123/contacts/individuals/known-individuals/456"
          >
            Test Test
          </a>
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`IndividualLinkCell should render with individual data 1`] = `
<tr>
  <td
    class="name-cell-root"
  >
    <div
      class="content-container"
    >
      <div
        class="text-truncate"
      >
        <div
          class="table-title text-truncate"
        >
          <a
            class="text-truncate"
            data-discover="true"
            href="/workspace/123/contacts/individuals/known-individuals/individual456"
          >
            individual Test
          </a>
        </div>
      </div>
    </div>
  </td>
</tr>
`;
